# portfolioWeb

./: .gitignore  README.md  asset-manifest.json  index.html  pyproject.toml
back-end/app/: config.py  main.py  models.py
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.js  index.js
front-end/src/api/: apiClients.js
front-end/src/components/: CardCarousel.js  LoginForm.js  Navbar.js  RegisterForm.js  TarjetaReutilizable.js
front-end/src/pages/: HomePage.js  LoginPage.js  RegisterPage.js
front-end/src/routes/: AppRouter.js
static/css/: main.8d5fb9db.css  main.8d5fb9db.css.map
static/js/: main.7ad8aac1.js  main.7ad8aac1.js.map  main.e8d8067c.js  main.e8d8067c.js.map  main.fad5287f.js  main.fad5287f.js.map
